@@ -20,7 +20,8 @@ XDGMIME_SRC = xdgmime.c
 
 XDGMIME = xdgmime/$(XDGMIME_SRC) ;
 
-SOURCE = Config.cpp 
+SOURCE = Missing.c
+		 Config.cpp 
 		 DesktopFile.cpp
 		 StrUtil.cpp
 		 Util.cpp
